Fix tests to be Java 8 compatible
Signed-off-by: Eddie Hung <eddie.hung@amd.com>